kubernetes-v2/personal/applications/nocodb/deployment.yaml
---

apiVersion: apps/v1
kind: Deployment

metadata:
  name: nocodb
  namespace: nocodb
  labels:
    app: nocodb

spec:
  replicas: 1
  strategy:
    type: Recreate

  selector:
    matchLabels:
      app: nocodb
  template:
    metadata:
      labels:
        app: nocodb
    spec:
      containers:
        - name: main

          image: nocodb/nocodb:0.255.2

          resources:
            requests:
              cpu: "500m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"

          ports:
            - name: http
              containerPort: 8080

          volumeMounts:
            - mountPath: /usr/app/data/
              name: data-volume

      volumes:
        - name: data-volume
          persistentVolumeClaim:
            claimName: nocodb-sqlite
