kubernetes-v2/personal/applications/nocodb/redis.yaml
---

apiVersion: apps/v1
kind: Deployment

metadata:
  name: redis
  namespace: nocodb
  labels:
    app: redis

spec:
  replicas: 1

  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: main
          image: redis:6
          ports:
            - containerPort: 6379

---

apiVersion: v1
kind: Service

metadata:
  name: redis
  namespace: nocodb

spec:
  selector:
    app: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
