kubernetes-v2/personal/applications/nocodb/ingress.yaml
---

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute

metadata:
  name: nocodb-http
  namespace: nocodb

spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`nocodb.agrrh.com`)
      middlewares:
        - name: whitelist
          namespace: kube-system
      services:
        - kind: Service
          name: nocodb
          namespace: nocodb
          port: 80
